Update REUSE.toml annotation paths to include README.md
Added README.md to the annotation paths in REUSE.toml for license compliance. This ensures that the file is properly covered under the SPDX declarations. No additional changes were made to the licensing details.

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -8,7 +8,7 @@ SPDX-PackageSupplier = "Winni Neessen <wn@neessen.dev>"
 SPDX-PackageDownloadLocation = "https://github.com/wneessen/dbenc"
 
 [[annotations]]
-path = ["go.sum"]
+path = ["go.sum", "README.md"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "Winni Neessen <wn@neessen.dev>"
 SPDX-License-Identifier = "MIT"
